package Model;

/**
 *
 * Static helper class for JFugue library that provides constant variables that represents duration of notes
 */
public class Duration {
    private Duration(){}
    
    /**
     * Char that represent whole note in JFugue library
     */
    static public char Whole = 'w';
    /**
     * Char that represent half note in JFugue library
     */
    static public char Half = 'h';
    /**
     * Char that represent quater note in JFugue library
     */
    static public char Quater = 'q';
    /**
     * Char that represent eighth note in JFugue library
     */
    static public char  Eighth = 'i';
    /**
     * Char that represent sixteenth note in JFugue library
     */
    static public char Sixteenth = 's';
    /**
     * Char that represent thirty-second note in JFugue library
     */
    static public char Thirty_second = 't';
    /**
     * Char that represent sixty-fourth note in JFugue library
     */
    static public char Sixty_fourth = 'x';
    /**
     * Char that represent one-twenty-eighth note in JFugue library
     */
    static public char One_twenty_eighth = 'o';
}
