package SongCreatorWindow.Model.Core;

public enum MusicClefSelection
{
    ViolinClef,
    BassClef,
    AltoClef
}
