package SongCreatorWindow.Model.Core;

public enum SoundModification
{
    None,
    Sharp,
    Flat
}
