package SongCreatorWindow.Model.Core;

public enum SoundTypeSelection
{
    Note,
    Accord
}
