package SongCreatorWindow.Model.Core;

public enum TieSelection
{
    None,
    Begin,
    Continue,
    Include, End
}
