package SongCreatorWindow.Model.Exceptions;

public class CannotAddAnotherPathException extends Exception
{
    public CannotAddAnotherPathException(String errorMessage) {
        super(errorMessage);
    }
}
